# airflow_pollen

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
airflow_pollen/common/connections/: __init__.py  postgres.py  telegram.py
airflow_pollen/common/tasks/: __init__.py  pollen_tasks.py
airflow_pollen/dags/: pollen_dag.py
