[project]
name = "airflow_pollen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flask-appbuilder>=4.8.0",
    "graphviz>=0.21",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=1.4.54",
]
